# beast2

./: .cursorignore  .drone.star  .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.adoc  README.md  tmpclaude-fc7e-cwd
.drone/: drone.bat  drone.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bin64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  boost_beast2.sln  boost_beast2.vcxproj  boost_beast2.vcxproj.filters  cmake_install.cmake
bin64/Dependencies/boost/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Boost.sln  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
bin64/Testing/: TAG
bin64/Testing/20260117-0658/: Test.xml
bin64/example/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
bin64/example/server/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  beast2_server_example.vcxproj  beast2_server_example.vcxproj.filters  cmake_install.cmake
bin64/test/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
bin64/test/unit/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  boost_beast2_tests-da39a3e_include.cmake  boost_beast2_tests.vcxproj  boost_beast2_tests.vcxproj.filters  cmake_install.cmake
build-wsl/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  build.ninja.tmp2ba96  cmake_install.cmake
build-wsl/Dependencies/boost/: CTestTestfile.cmake  cmake_install.cmake
build-wsl/Testing/: TAG
build-wsl/Testing/20260119-1028/: Test.xml
build-wsl/example/: CTestTestfile.cmake  cmake_install.cmake
build-wsl/example/server/: CTestTestfile.cmake  cmake_install.cmake
build-wsl/test/: CTestTestfile.cmake  cmake_install.cmake
build-wsl/test/unit/: CTestTestfile.cmake  boost_beast2_tests-da39a3e_include.cmake  cmake_install.cmake
cmake/toolchains/: msvc.cmake
doc/: antora.yml  local-playbook.yml  mrdocs.yml
doc/modules/ROOT/: nav.adoc
doc/tagfiles/: boost-beast2-doxygen.tag.xml  boost-http-doxygen.tag.xml
example/: CMakeLists.txt  Jamfile  beast-test-CA.crt  dh.pem  post-rpc.html  post-test.html  rootCA.key  rootCA.pem  rootCA.srl  server.crt  server.csr  server.key
example/client/: CMakeLists.txt  Jamfile
example/client/burl/: CMakeLists.txt  Jamfile  any_iostream.cpp  any_iostream.hpp  any_stream.hpp  base64.cpp  base64.hpp  connect.cpp  connect.hpp  cookie.cpp  cookie.hpp  error.cpp  error.hpp  file.cpp  file.hpp  glob.cpp  glob.hpp  main.cpp  message.cpp  message.hpp  mime_type.cpp  mime_type.hpp  multipart_form.cpp  multipart_form.hpp  options.cpp  options.hpp  progress_meter.cpp  progress_meter.hpp  request.hpp  task_group.hpp  urlencoded_form.cpp  urlencoded_form.hpp  utils.cpp  utils.hpp
example/client/get/: CMakeLists.txt  Jamfile  main.cpp
example/client/jsonrpc/: CMakeLists.txt  Jamfile  cpp11.cpp  cpp20.cpp  eth_methods.hpp  main.cpp  methods.hpp
example/client/jsonrpc/jsonrpc/: any_stream.hpp  client.cpp  client.hpp  errc.cpp  errc.hpp  error.hpp  method.hpp
example/client/jsonrpc/jsonrpc/detail/: converts_to.hpp  initiation_base.hpp
example/client/jsonrpc/lib/: basic_client.hpp  client.hpp  errc.hpp  error.hpp  method.hpp
example/client/jsonrpc/lib/detail/: converts_to.hpp
example/client/visit/: CMakeLists.txt  Jamfile  main.cpp
example/cpp20/: CMakeLists.txt  Jamfile
example/cpp20/co_spawn/: CMakeLists.txt  Jamfile  async_42.hpp  async_result.hpp  main.cpp  stream.hpp
example/server/: CMakeLists.txt  Jamfile  README.md  acceptor.hpp  asio_params.hpp  asio_server.cpp  asio_server.hpp  certificate.cpp  certificate.hpp  fixed_array.hpp  format.hpp  handler.cpp  handler.hpp  http_params.hpp  http_responder.hpp  listening_port.hpp  log.html  logger.cpp  logger.hpp  logger_example.cpp  main.cpp  post_work.cpp  post_work.hpp  serve_detached.hpp  serve_log_admin.cpp  serve_log_admin.hpp  server.cpp  server.hpp  worker.cpp  worker.hpp  worker_ssl.hpp
example/src/http_io/: router.cpp
include/boost/: beast2.hpp  http_io.hpp
include/boost/beast2/: application.hpp  asio_io_context.hpp  body_read_stream.hpp  body_write_stream.hpp  buffer.hpp  client.hpp  corosio_router.hpp  endpoint.hpp  error.hpp  format.hpp  http_server.hpp  http_worker.hpp  https_server.hpp  log_service.hpp  logger.hpp  polystore.hpp  read.hpp  (+5 more)
meta/: explicit-failures-markup.xml  libraries.json
src/: application.cpp  asio_io_context.cpp  error.cpp  http_server.cpp  http_worker.cpp  https_server.cpp  log_service.cpp  logger.cpp  polystore.cpp  route_rule.hpp
src/detail/: except.cpp
src/server/: basic_router.cpp  body_source.cpp  endpoint.cpp  http_handler.cpp  http_server.cpp  https_server.cpp  logger.cpp  ports.cpp  route_handler.cpp  route_rule.cpp  route_rule.hpp  router.cpp  router_state.cpp  router_types.cpp  segs.hpp  serve_not_found.cpp  serve_redirect.cpp  serve_static.cpp  server.cpp  server_asio.cpp  staticfiles.cpp  workers.cpp
test/: CMakeLists.txt  Jamfile
test/cmake_test/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  Jamfile  application.cpp  asio_io_context.cpp  beast.cpp  body_read_stream.cpp  body_write_stream.cpp  buffer.cpp  client.cpp  endpoint.cpp  format.cpp  http_server.cpp  logger.cpp  polystore.cpp  read.cpp  router.cpp  sandbox.cpp  ssl_stream.cpp  stream.cpp  test_helpers.hpp  wrap_executor.cpp  write.cpp
test/unit/server/: any_lambda.cpp  basic_router.cpp  body_source.cpp  call_mf.cpp  fixed_array.cpp  http_server.cpp  http_stream.cpp  https_server.cpp  logger.cpp  route_handler.cpp  route_handler_asio.cpp  route_rule.cpp  router.cpp  router_asio.cpp  router_state.cpp  router_types.cpp  serve_static.cpp  server_.cpp  server_asio.cpp
(+579 files in other folders)
